# alchm-agents-app

./: .claudeignore  .cursorignore  .dockerignore  .env.example  .env.production.example  .env.render.template  .eslint-upgrade.md  .eslintignore  .gitignore  .gitlab-ci.yml  .npmrc  .prettierignore  .prettierrc  .vercel-install.sh  .vercel-trigger  .vercelignore  .yarnrc  .yarnrc.yml  AGENT_CONFIGURATION_AUDIT.md  AGENT_ENHANCEMENT_REPORT.md  AI_GATEWAY_SETUP.md  API_DOCUMENTATION.md  API_DOCUMENTATION_UPDATE.md  API_STREAMLINING_COMPLETE.md  APPLYING_SEPARATING_ASPECTS_PROMPT.md  ASIMOV_RISING_SIGN_UPDATE.md  A_NUMBER_INTEGRATION_SUMMARY.md  BACKEND_DEPLOYMENT_GUIDE.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_RUNNING.md  BETA_LAUNCH_STRATEGY.md  BETA_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CHAT_TEST_INSTRUCTIONS.md  CHECK_WEBHOOK_STATUS.md  CHROMADB_SYNC_COMPLETE.md  CLAUDE.md  CLAUDE_UPGRADE_GUIDE.md  CODEBASE_CLEANUP_PLAN.md  COMPLETE_PLANETARY_AGENT_SYSTEM.md  (+317 more)
.storybook/: main.ts
backend/: .dockerignore  .gitignore  .railwayignore  .yarnrc.yml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.npm  Dockerfile.production  INTEGRATION_TESTS_IMPLEMENTATION.md  NGROK_VS_GITLAB_CI.md  QUICKSTART_INTEGRATION_TESTS.md  QUICK_START.md  README.md  README.test.md  README_MCP.md  RENDER_CHANGES_ONLY.txt  RENDER_ENV_PASTE.txt  RENDER_ENV_UPDATE.txt  TESTING.md  VERCEL_DASHBOARD_CONFIG.md  alchm_mcp.py  claude-desktop.pa.example.json  crud.py  cursor.pa.mcp.example.json  database.py  docker-compose.test.yml  docker-compose.yml  eslint.config.js  feed_emitter.py  improve_moon_degree_agents.py  ingest.py  install-frontend-only.sh  jest.config.integration.js  jest.config.js  jest.config.unit.js  junit-integration.xml  junit-unit.xml  junit.xml  kinetic_profiles.py  (+29 more)
backend/.next/: trace
backend/backend/scripts/: verify-deployment-ready.js
backend/chroma_db/: chroma.sqlite3
backend/deploy/: nginx.conf  production.yml  railway.toml  render.yaml
backend/prisma/: schema.prisma
backend/scripts/: health-check.js  monitor-ngrok-health.sh  monitoring-dashboard.sh  start-dev.sh  start-ngrok-persistent.sh  start-production.sh  test-alchemical-kinetics.sh  test-alchm.ts  test-endpoints.sh
backend/src/: index.ts
backend/src/lib/: alchemizer-core.ts
backend/src/middleware/: auth.ts  error-handler.ts  feature-flags.ts  request-logger.ts  security.ts
backend/src/routes/: agent-actions.ts  agents.ts  alchemy.ts  consciousness.ts  ephemeris.ts  health.ts  kinetics.ts  planetary.ts  tokens.ts
backend/src/services/: agent-action-mapper.ts  agent-generator.ts  alchemical-kinetics-service.ts  alchemizer-service.ts  alchm-client.ts  alchm-kitchen-webhook.ts  astrological-action-engine.ts  astrological-action-scheduler.ts  cache.ts  chart-synthesizer.ts  galileo-logger.ts  horoscope-service.ts  kinetics-service.ts  monica-constant-service.ts  planetary-hours.ts  planetary-service.ts  swiss-ephemeris.ts  thermodynamics.ts  token-calculator.ts  transit-trigger-detector.ts
backend/src/types/express/: index.d.ts
backend/src/utils/: circuit-breaker.ts  logger.ts  startup-validation.ts
backend/src/websocket/: handlers.ts
backend/tests/: setup.integration.d.ts  setup.integration.ts  setup.ts  test_admin_mcp_summary.py  test_alchm_launch.py  test_mcp_server.py  test_mcp_stdio.py
backend/tests/fixtures/mock-api/: package.json  server.js
backend/tests/helpers/: fixtures.d.ts  fixtures.ts  test-server.d.ts  test-server.ts
backend/tests/routes/: alchemy.test.ts
backend/tests/services/: alchemizer-service.test.ts  planetary-hours.test.ts  thermodynamics.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1427 files in other folders)
