[package]
name = "alchm"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
